--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-.paket/
 .fable/
 .fake/
 .vs/
@@ -11,5 +10,7 @@ src/Client/public/js/
 release.cmd
 release.sh
 .idea/
+*.orig
 *.DotSettings.user
 deploy
+.ionide/
