--- a/src/Server/Server.fsproj
+++ b/src/Server/Server.fsproj
@@ -7,7 +7,7 @@
     <ItemGroup>
         <None Include="paket.references" />
         <Compile Include="..\Shared\Shared.fs" />
-        <Compile Include="Builder.fs" />
+        <Compile Include="Server.fs" />
     </ItemGroup>
     <Import Project="..\..\.paket\Paket.Restore.targets" />
 </Project>
